force-app/main/default/objects/Violation_Accounting_Code__c/Violation_Accounting_Code__c.object-meta.xml
<CustomObject>
    <description>Joins together violations on cases to the accounting codes that apply based on the violation type. Used for creating reports for AR only. Table is populated via trigger on Case Violation.</description>
    <label>Violation Accounting Code</label>
    <nameField>
        <displayFormat>VAC-{0000000}</displayFormat>
        <label>Violation Accounting Code ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Violation Accounting Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>