force-app/main/default/objects/Violation_Accounting_Code__c/fields/Applicable_Accounting_Code__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Accounting_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the parent applicable accounting code that applies on this violation.</description>
    <label>Applicable Accounting Code</label>
    <referenceTo>Applicable_Accounting_Code__c</referenceTo>
    <relationshipLabel>Violation Accounting Codes</relationshipLabel>
    <relationshipName>Violation_Accounting_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>