force-app/main/default/objects/Violation_Accounting_Code__c/fields/Applied_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Applied_Adjustment_Amount__c</fullName>
    <description>Calculates the adjustment amount that applies to the specific accounting code</description>
    <formula>IF ( ISPICKVAL (   Applicable_Accounting_Code__r.Accounting_Code__r.Payment_Type__c , 'Penalty' ), Case_Violation__r.Penalty_Adjustment_Amount__c  * Applicable_Accounting_Code__r.Split_Percentage__c, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Based on any split percentage on the accounting code, this defines that amount that applies from the violation</inlineHelpText>
    <label>Applied Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>