force-app/main/default/objects/Violation_Accounting_Code__c/fields/Current_Doc__c.field-meta.xml
<CustomField>
    <fullName>Current_Doc__c</fullName>
    <formula>Applicable_Accounting_Code__r.Accounting_Code__r.Current_Doc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Doc</label>
    <type>Text</type>
</CustomField>