force-app/main/default/objects/Violation_Accounting_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case_Violation__c</columns>
    <columns>Applicable_Accounting_Code__c</columns>
    <columns>Applied_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>